# AutoTrack

./: CMakeLists.txt  FBOF.cc  FBOF.h  FarnebackVehicleDetect.cc  FarnebackVehicleDetect.h  FrameStream.h  GUI.cc  GUI.h  ImageRep.cpp  ImageRep.h  L1APG.cpp  L1APG.h  Media.h  Mtk.cc  Mtk.h  Pipe.h  Public.cpp  Public.h  README.md  Stopwatch.h  main.cc  remote.h  util.h
