cmake_minimum_required (VERSION 2.6)
set(SRC_FILES main.cc FarnebackVehicleDetect.cc Mtk.cc L1APG.cpp ImageRep.cpp Public.cpp GUI.cc)
set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)
add_compile_options(-std=c++1y)
#set(CMAKE_CXX_FLAGS "-std=c++1y -stdlib=libc++")
#add_compile_options(-stdlib=libc++)
PROJECT(AutoTrack)
# Requires OpenCV
FIND_PACKAGE( OpenCV 3.1.0 REQUIRED )
FIND_PACKAGE( Boost 1.60.0 REQUIRED COMPONENTS system thread)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
link_directories(${OpenCV_LIB_DIR})
ADD_EXECUTABLE( ${PROJECT_NAME} ${SRC_FILES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${OpenCV_LIBS} ${Boost_LIBRARIES})
